# mineraker

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: solver.txt
src/: board_tile.h  board_tile.hpp  boardtile.hpp  gamemanager.hpp  main.cpp  mineboard.hpp  mineboardbase.hpp  mineboardcontroller.hpp  mineboardformat.hpp  mineboardsolver.hpp  mineraker.hpp  neuralraker.hpp  renderable.hpp  sdl_windowmanager.h  solver.hpp  solver_iterator.hpp  sweepboard.h  sweepboard.hpp  sweepboardcontroller.h  sweepboardcontroller.hpp  sweepboardformat.hpp  text.hpp  texture.hpp  tile.hpp  vectorspace.hpp  windowmanager.hpp
tests/: board_generator.cpp  copy_vs_erase.cpp  ownership.cpp  pattern_matching.cpp  predicate_function.cpp  solver.cpp
